--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,8 @@
-//
-.pagination{
-    list-style: none;
-    li{
-        display: inline-block;
-    }
-}
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
